test/compile_errors/err_issue64_ref_hashmap_get_bad_key_type.w
//! expect-error: wrong argument type in call to 'HashMap.get'

fn main:
    let lookup: HashMap[str, i32] = HashMap.new()
    let borrowed = &lookup
    borrowed.get(1)
